[workspace]
members = ["erpc-workers", "erpc-metrics", "erpc-scanner", "erpc-analysis"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1.0"
serde = "1.0"
prost = "0.12"
dotenv = "0.15"
crossbeam = "0.8"
erpc-scanner = { path = "../erpc-scanner" }
erpc-metrics = { path = "../erpc-metrics" }
futures = "0.3"
petgraph = "0.6"
tokio-stream = "0.1"
dashmap = "5.5"
tonic = "0.10"
tonic-reflection = "0.10"
neo4rs = "0.6"
thiserror = "2"
env_logger = "0.10"
log = "0.4"
toml = "0.8"
deadqueue = "0.2"
humantime = "2.1"
clap = { version = "4.4", features = ["derive"] }
r2d2_sqlite = "0.22"
r2d2 = "0.8"
log4rs = "1.2"
arti-client = { version = "0.10", features = ["experimental"] }
tor-dirmgr = "0.11"
tor-rtcompat = "0.9.5"
tor-circmgr = { version = "0.11", features = ["experimental-api"] }
tor-netdir = { version = "0.9", features = ["experimental-api"] }
tor-netdoc = { version = "0.9", features = ["dangerous-expose-struct-fields"] }
tor-config = { version = "0.9" }
tonic-build = "0.9.2"
chrono = "^0.4"
async-stream = "0.3"
futures-core = "0.3"
tor-chanmgr = { version = "0.10" }
tor-proto = { version = "0.12" }
reqwest = "0.11"
async-compression = { version = "0.4", features = ["all"] }
